# El-El-Em

./: .gitignore  README.custom.md  README.md  requirements.txt
Apps/: .dockerignore  .gitignore  Dockerfile  add_packages.py  app.py  app_chainlit.py  app_gradio.py  config.py  docker-compose.yaml  main.py  postgres.docker-compose.yaml  requirements.txt  temp.txt  vtc.env
Apps/app_streamlit/: main.py
Apps/apps/: app_gradio.py
Apps/backup/: Dockerfile.fastapi-alpine-env  Dockerfile.fastapi-slim-env  Dockerfile.fastapi1  Dockerfile.fastapi_org  Dockerfile.fatapi_noenv  Dockerfile.streamlit  app.py  chatbot.py  crew_ai.yaml  main_raw.py  vector_stores.py  vectorstores.py
Apps/configs/: constants.py  crew_ai.yaml  tdtu.yaml
Apps/custom/: vtc.README.md  vtc.docker-compose.yaml
Apps/data/: husky.txt
Apps/features/: general_chat.ipynb
Apps/functions/: chatbot.py
Apps/my_chainlit/: add_packages.py
Apps/my_configs/: constants.py  crew_ai.yaml  tdtu.json  tdtu.yaml  vtc.json  vtc.yaml  vtc1.yaml
Apps/my_crewai/: agents.py  tools.ipynb  tools.py
Apps/my_gradio/: chatbot.py
Apps/my_langchain/: add_package_file.py  agent_tools.py  agents.py  chains.py  chat_models.py  config.py  document_loaders.py  document_transformers.py  documents.py  histories.py  memories.py  memory.py  output_parsers.py  prompts.py  retrievers.py  runnables.py  (+6 more)
Apps/use_cases/LangChain/LangServe/basic/: pyproject.toml
Apps/use_cases/LangChain/LangServe/basic/app/: server.py
LangChain/: requirements.txt
Notes/: tmp.txt
utils/: extracted_files.txt  read_files_to_txt.ipynb
(+556 files in other folders)
